Upload for the fifth time

--- a/an的项目.html
+++ b/an的项目.html
@@ -8,11 +8,16 @@
 </head>
 <body>
     <h1>黎世铵的项目</h1>
+    <p>VUE项目</p>
     <h2><a href="https://maytheafterlifehavenocode.github.io/novel/#/">小说</a></h2>
     <p>小说项目截图</p>
     <img src="images/小说.png">
     <h2><a href="https://maytheafterlifehavenocode.github.io/music/#/">音乐</a></h2>
     <p>音乐项目截图</p>
     <img src="images/音乐.png">
+    <p>js项目</p>
+    <h2><a href="https://maytheafterlifehavenocode.github.io/贪吃蛇.html">贪吃蛇</a></h2>
+    <p>贪吃蛇截图</p>
+    <img src="images/贪吃蛇.jpg" alt="">
 </body>
 </html>
