--- a/an的项目.html
+++ b/an的项目.html
@@ -18,6 +18,6 @@
     <p>js项目</p>
     <h2><a href="https://maytheafterlifehavenocode.github.io/贪吃蛇.html">贪吃蛇</a></h2>
     <p>贪吃蛇截图</p>
-    <img src="images/贪吃蛇.jpg" alt="">
+    <img src="images/贪吃蛇.jpg">
 </body>
 </html>
